# aihsm

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/ship-aihsm/: SKILL.md
.github/workflows/: ci.yml
aihsm/: __init__.py  cli.py  detect.py  installer.py  log.py  messages.py  patterns.py  redact.py  store.py
docs/superpowers/plans/: 2026-07-11-claude-secret-harness.md
docs/superpowers/specs/: 2026-07-11-secret-harness-design.md
hooks/: entry.py  hooks.json
secret_harness/: allowlist.py  detect.py  installer.py  log.py  messages.py  patterns.py  redact.py  store.py  vault.py
skills/aihsm/: SKILL.md
skills/secret-harness/: SKILL.md
tests/: conftest.py  test_allowlist.py  test_cli.py  test_detect.py  test_detect_hook.py  test_installer.py  test_log.py  test_patterns.py  test_redact.py  test_smoke.py  test_store.py  test_vault.py
tests/fixtures/: n8n_workflow_shapes.json
