[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aihsm"
version = "0.1.2"
description = "Blocks secrets typed into Claude Code and stores them in the OS credential vault."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "David Soden" }]
dependencies = ["keyring>=24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
aihsm = "aihsm.cli:main"

[tool.setuptools]
packages = ["aihsm"]
